--- a/style.css
+++ b/style.css
@@ -91,15 +91,15 @@ header a {
 }
 
 a:nth-child(2) {
-  opacity: .4;
+  opacity: 0.4;
 }
 
 a:hover {
-  opacity: .4;
+  opacity: 0.4;
 }
 
 a:active {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 @media screen and (max-width:900px) {
