--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ p {
 button {
   width: 269px;
   height: 62px;
-  background: #9499ea;
+  background: #9499ef;
   box-shadow: 0px 10px 24px rgba(148, 153, 234, 0.0979959);
 
   font-size: 24px;
